Upgrade to use Java 21 (#113)
The upgrade concerns both the compilation and the CI.